# obs-app-audio

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  app-audio-capture.cpp  audio-helpers.cpp  audio-helpers.h  audio-hook-info.h
audio-hook/: CMakeLists.txt  audio-hook.cpp  core-audio-capture.cpp
data/locale/: en-US.ini
dll-injector/: CMakeLists.txt  dll-injector.cpp
